[gd_scene load_steps=4 format=2]

[ext_resource path="res://crossbowpo.gd" type="Script" id=1]
[ext_resource path="res://art/crossbow.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 2, 1 ]
}

[node name="crossbowpo" type="Sprite"]
position = Vector2( 3.0411, -16.2941 )
rotation = 1.5708
texture = ExtResource( 2 )
hframes = 4
frame = 3
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shoot = SubResource( 1 )

[node name="mouth" type="Position2D" parent="."]
position = Vector2( 16.0724, -34.9228 )
rotation = -1.5708

[node name="shoottimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="bullet" type="Node" parent="."]

[node name="spectimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="shoottimer" to="." method="_on_shoottimer_timeout"]
[connection signal="timeout" from="spectimer" to="." method="_on_spectimer_timeout"]
